// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminPage should match a snapshot when has data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Admin
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Your User Config
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
          </p>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Docs
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-primary el-button"
          >
            Download CSV
            <div
              class="el-button-loader"
            />
          </button>
          <div
            class="el-mb5"
          >
            <h2
              class="el-subtitle"
            >
              Organisations
            </h2>
            <p
              class="el-has-grey-text el-small-text"
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </p>
            <div
              class="el-border-radius controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="a2331ba0-e4c9-4057-b7a3-723f2abbd9cb"
                  >
                    Office Groups Testing
                  </option>
                  <option
                    value="f3c86df7-0c20-4182-ad5a-d8a135999e3b"
                  >
                    XTM Estates Ltd
                  </option>
                </select>
                <label
                  class="el-label"
                  for="myId"
                >
                  Select Organisation
                </label>
              </div>
            </div>
          </div>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <h1
            class="el-title"
          >
            Users List
          </h1>
          <form>
            <div
              class="el-form-layout-has-margin el-form-layout"
            >
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="email"
                    placeholder="Search for a user"
                  />
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Email
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="name"
                    placeholder="Search for a user"
                  />
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Name
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <label
                  class="el-label"
                >
                  MFA Enabled
                </label>
                <div
                  class="el-has-grey-bg el-toggle-radio-wrap"
                >
                  <input
                    checked=""
                    class="el-toggle-radio"
                    id="mfa-enabled-all"
                    name="mfaEnabled"
                    type="radio"
                    value=""
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="mfa-enabled-all"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      All
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="mfa-enabled-true"
                    name="mfaEnabled"
                    type="radio"
                    value="true"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="mfa-enabled-true"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Enabled
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="mfa-enabled-false"
                    name="mfaEnabled"
                    type="radio"
                    value="false"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="mfa-enabled-false"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Not Configured
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </form>
          <div
            class="el-fade-in el-mb11 el-table"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="4"
          >
            <div
              class="el-table-headers-row"
            >
              <div
                class="el-table-header"
              >
                Name
              </div>
              <div
                class="el-table-header"
              >
                Email
              </div>
              <div
                class="el-table-header"
              >
                Job Title
              </div>
              <div
                class="el-table-header"
              >
                Active
              </div>
              <div
                class="el-table-header"
              >
                <span
                  class="el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-row-container"
            >
              <div
                class="el-table-row"
              >
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Name"
                  >
                    Will McVay
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Email"
                  >
                    test@icloud.com
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Job Title"
                  />
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Active"
                  >
                    <span
                      class="el-intent-success el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                </div>
                <div
                  class="el-table-expandable-row-trigger-cell"
                >
                  <span
                    class="el-intent-secondary el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-expandable-row"
              >
                <div
                  class="el-table-expandable-container"
                >
                  <div
                    class="el-mb7 el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-primary el-button"
                      >
                        Fetch Current Authenticators
                        <div
                          class="el-button-loader"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-pagination-wrap"
          >
            <div
              class="el-pagination-text"
            >
              <input
                class="el-pagination-input"
                value="1"
              />
               of 
              1
            </div>
            <button
              class="el-pagination-button"
              data-testid="back-button"
              type="button"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </button>
            <button
              class="el-pagination-button"
              data-testid="forward-button"
              type="button"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </button>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Admin
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Your User Config
        </h2>
        <p
          class="el-has-grey-text el-small-text"
        >
          This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
        </p>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Docs
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-primary el-button"
        >
          Download CSV
          <div
            class="el-button-loader"
          />
        </button>
        <div
          class="el-mb5"
        >
          <h2
            class="el-subtitle"
          >
            Organisations
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </p>
          <div
            class="el-border-radius controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="a2331ba0-e4c9-4057-b7a3-723f2abbd9cb"
                >
                  Office Groups Testing
                </option>
                <option
                  value="f3c86df7-0c20-4182-ad5a-d8a135999e3b"
                >
                  XTM Estates Ltd
                </option>
              </select>
              <label
                class="el-label"
                for="myId"
              >
                Select Organisation
              </label>
            </div>
          </div>
        </div>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <h1
          class="el-title"
        >
          Users List
        </h1>
        <form>
          <div
            class="el-form-layout-has-margin el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="email"
                  placeholder="Search for a user"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Email
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="name"
                  placeholder="Search for a user"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                MFA Enabled
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="mfa-enabled-all"
                  name="mfaEnabled"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="mfa-enabled-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="mfa-enabled-true"
                  name="mfaEnabled"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="mfa-enabled-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Enabled
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="mfa-enabled-false"
                  name="mfaEnabled"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="mfa-enabled-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Not Configured
                  </span>
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-fade-in el-mb11 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="4"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              Name
            </div>
            <div
              class="el-table-header"
            >
              Email
            </div>
            <div
              class="el-table-header"
            >
              Job Title
            </div>
            <div
              class="el-table-header"
            >
              Active
            </div>
            <div
              class="el-table-header"
            >
              <span
                class="el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Name"
                >
                  Will McVay
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Email"
                >
                  test@icloud.com
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Job Title"
                />
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Active"
                >
                  <span
                    class="el-intent-success el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-expandable-row-trigger-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-expandable-row"
            >
              <div
                class="el-table-expandable-container"
              >
                <div
                  class="el-mb7 el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-primary el-button"
                    >
                      Fetch Current Authenticators
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-pagination-wrap"
        >
          <div
            class="el-pagination-text"
          >
            <input
              class="el-pagination-input"
              value="1"
            />
             of 
            1
          </div>
          <button
            class="el-pagination-button"
            data-testid="back-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
          <button
            class="el-pagination-button"
            data-testid="forward-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AdminPage should match a snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Admin
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Your User Config
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
          </p>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Docs
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-primary el-button"
          >
            Download CSV
            <div
              class="el-button-loader"
            />
          </button>
          <div
            class="el-mb5"
          >
            <h2
              class="el-subtitle"
            >
              Organisations
            </h2>
            <p
              class="el-has-grey-text el-small-text"
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </p>
            <div
              class="el-border-radius controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                </select>
                <label
                  class="el-label"
                  for="myId"
                >
                  Select Organisation
                </label>
              </div>
            </div>
          </div>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <h1
            class="el-title"
          >
            Users List
          </h1>
          <form>
            <div
              class="el-form-layout-has-margin el-form-layout"
            >
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="email"
                    placeholder="Search for a user"
                  />
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Email
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="name"
                    placeholder="Search for a user"
                  />
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Name
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <label
                  class="el-label"
                >
                  MFA Enabled
                </label>
                <div
                  class="el-has-grey-bg el-toggle-radio-wrap"
                >
                  <input
                    checked=""
                    class="el-toggle-radio"
                    id="mfa-enabled-all"
                    name="mfaEnabled"
                    type="radio"
                    value=""
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="mfa-enabled-all"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      All
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="mfa-enabled-true"
                    name="mfaEnabled"
                    type="radio"
                    value="true"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="mfa-enabled-true"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Enabled
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="mfa-enabled-false"
                    name="mfaEnabled"
                    type="radio"
                    value="false"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="mfa-enabled-false"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Not Configured
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </form>
          <div
            class="el-loader-container"
          >
            <div
              class="el-loader"
            >
              <div
                class="el-loader-moving-bar"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Admin
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Your User Config
        </h2>
        <p
          class="el-has-grey-text el-small-text"
        >
          This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
        </p>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Docs
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-primary el-button"
        >
          Download CSV
          <div
            class="el-button-loader"
          />
        </button>
        <div
          class="el-mb5"
        >
          <h2
            class="el-subtitle"
          >
            Organisations
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </p>
          <div
            class="el-border-radius controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
              </select>
              <label
                class="el-label"
                for="myId"
              >
                Select Organisation
              </label>
            </div>
          </div>
        </div>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <h1
          class="el-title"
        >
          Users List
        </h1>
        <form>
          <div
            class="el-form-layout-has-margin el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="email"
                  placeholder="Search for a user"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Email
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="name"
                  placeholder="Search for a user"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                MFA Enabled
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="mfa-enabled-all"
                  name="mfaEnabled"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="mfa-enabled-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="mfa-enabled-true"
                  name="mfaEnabled"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="mfa-enabled-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Enabled
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="mfa-enabled-false"
                  name="mfaEnabled"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="mfa-enabled-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Not Configured
                  </span>
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AdminPage should match a snapshot when no users found 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Admin
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Your User Config
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
          </p>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Docs
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-primary el-button"
          >
            Download CSV
            <div
              class="el-button-loader"
            />
          </button>
          <div
            class="el-mb5"
          >
            <h2
              class="el-subtitle"
            >
              Organisations
            </h2>
            <p
              class="el-has-grey-text el-small-text"
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </p>
            <div
              class="el-border-radius controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="a2331ba0-e4c9-4057-b7a3-723f2abbd9cb"
                  >
                    Office Groups Testing
                  </option>
                  <option
                    value="f3c86df7-0c20-4182-ad5a-d8a135999e3b"
                  >
                    XTM Estates Ltd
                  </option>
                </select>
                <label
                  class="el-label"
                  for="myId"
                >
                  Select Organisation
                </label>
              </div>
            </div>
          </div>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <h1
            class="el-title"
          >
            Users List
          </h1>
          <form>
            <div
              class="el-form-layout-has-margin el-form-layout"
            >
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="email"
                    placeholder="Search for a user"
                  />
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Email
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="name"
                    placeholder="Search for a user"
                  />
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Name
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <label
                  class="el-label"
                >
                  MFA Enabled
                </label>
                <div
                  class="el-has-grey-bg el-toggle-radio-wrap"
                >
                  <input
                    checked=""
                    class="el-toggle-radio"
                    id="mfa-enabled-all"
                    name="mfaEnabled"
                    type="radio"
                    value=""
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="mfa-enabled-all"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      All
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="mfa-enabled-true"
                    name="mfaEnabled"
                    type="radio"
                    value="true"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="mfa-enabled-true"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Enabled
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="mfa-enabled-false"
                    name="mfaEnabled"
                    type="radio"
                    value="false"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="mfa-enabled-false"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Not Configured
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </form>
          <div
            class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-pn-content"
            >
              Please select an organisation from the left hand side before proceeding.
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Admin
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Your User Config
        </h2>
        <p
          class="el-has-grey-text el-small-text"
        >
          This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
        </p>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Docs
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-primary el-button"
        >
          Download CSV
          <div
            class="el-button-loader"
          />
        </button>
        <div
          class="el-mb5"
        >
          <h2
            class="el-subtitle"
          >
            Organisations
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </p>
          <div
            class="el-border-radius controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="a2331ba0-e4c9-4057-b7a3-723f2abbd9cb"
                >
                  Office Groups Testing
                </option>
                <option
                  value="f3c86df7-0c20-4182-ad5a-d8a135999e3b"
                >
                  XTM Estates Ltd
                </option>
              </select>
              <label
                class="el-label"
                for="myId"
              >
                Select Organisation
              </label>
            </div>
          </div>
        </div>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <h1
          class="el-title"
        >
          Users List
        </h1>
        <form>
          <div
            class="el-form-layout-has-margin el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="email"
                  placeholder="Search for a user"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Email
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="name"
                  placeholder="Search for a user"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                MFA Enabled
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="mfa-enabled-all"
                  name="mfaEnabled"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="mfa-enabled-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="mfa-enabled-true"
                  name="mfaEnabled"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="mfa-enabled-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Enabled
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="mfa-enabled-false"
                  name="mfaEnabled"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="mfa-enabled-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Not Configured
                  </span>
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            Please select an organisation from the left hand side before proceeding.
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AdminPage should match a snapshot when not multi org 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Admin
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Your User Config
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
          </p>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Docs
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-primary el-button"
          >
            Download CSV
            <div
              class="el-button-loader"
            />
          </button>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <h1
            class="el-title"
          >
            Users List
          </h1>
          <form>
            <div
              class="el-form-layout-has-margin el-form-layout"
            >
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="email"
                    placeholder="Search for a user"
                  />
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Email
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="name"
                    placeholder="Search for a user"
                  />
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Name
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <label
                  class="el-label"
                >
                  MFA Enabled
                </label>
                <div
                  class="el-has-grey-bg el-toggle-radio-wrap"
                >
                  <input
                    checked=""
                    class="el-toggle-radio"
                    id="mfa-enabled-all"
                    name="mfaEnabled"
                    type="radio"
                    value=""
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="mfa-enabled-all"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      All
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="mfa-enabled-true"
                    name="mfaEnabled"
                    type="radio"
                    value="true"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="mfa-enabled-true"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Enabled
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="mfa-enabled-false"
                    name="mfaEnabled"
                    type="radio"
                    value="false"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="mfa-enabled-false"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Not Configured
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </form>
          <div
            class="el-fade-in el-mb11 el-table"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="4"
          >
            <div
              class="el-table-headers-row"
            >
              <div
                class="el-table-header"
              >
                Name
              </div>
              <div
                class="el-table-header"
              >
                Email
              </div>
              <div
                class="el-table-header"
              >
                Job Title
              </div>
              <div
                class="el-table-header"
              >
                Active
              </div>
              <div
                class="el-table-header"
              >
                <span
                  class="el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-row-container"
            >
              <div
                class="el-table-row"
              >
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Name"
                  >
                    Will McVay
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Email"
                  >
                    test@icloud.com
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Job Title"
                  />
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Active"
                  >
                    <span
                      class="el-intent-success el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                </div>
                <div
                  class="el-table-expandable-row-trigger-cell"
                >
                  <span
                    class="el-intent-secondary el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-expandable-row"
              >
                <div
                  class="el-table-expandable-container"
                >
                  <div
                    class="el-mb7 el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-primary el-button"
                      >
                        Fetch Current Authenticators
                        <div
                          class="el-button-loader"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-pagination-wrap"
          >
            <div
              class="el-pagination-text"
            >
              <input
                class="el-pagination-input"
                value="1"
              />
               of 
              1
            </div>
            <button
              class="el-pagination-button"
              data-testid="back-button"
              type="button"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </button>
            <button
              class="el-pagination-button"
              data-testid="forward-button"
              type="button"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </button>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Admin
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Your User Config
        </h2>
        <p
          class="el-has-grey-text el-small-text"
        >
          This page allows you to configure and reset the Multi Factor Authentication (MFA) devices for your organisation users. For more information on how to do this, please refer to the documentation link below.
        </p>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Docs
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-primary el-button"
        >
          Download CSV
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <h1
          class="el-title"
        >
          Users List
        </h1>
        <form>
          <div
            class="el-form-layout-has-margin el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="email"
                  placeholder="Search for a user"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Email
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="name"
                  placeholder="Search for a user"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                MFA Enabled
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="mfa-enabled-all"
                  name="mfaEnabled"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="mfa-enabled-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="mfa-enabled-true"
                  name="mfaEnabled"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="mfa-enabled-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Enabled
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="mfa-enabled-false"
                  name="mfaEnabled"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="mfa-enabled-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Not Configured
                  </span>
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-fade-in el-mb11 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="4"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              Name
            </div>
            <div
              class="el-table-header"
            >
              Email
            </div>
            <div
              class="el-table-header"
            >
              Job Title
            </div>
            <div
              class="el-table-header"
            >
              Active
            </div>
            <div
              class="el-table-header"
            >
              <span
                class="el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Name"
                >
                  Will McVay
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Email"
                >
                  test@icloud.com
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Job Title"
                />
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Active"
                >
                  <span
                    class="el-intent-success el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-expandable-row-trigger-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-expandable-row"
            >
              <div
                class="el-table-expandable-container"
              >
                <div
                  class="el-mb7 el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-primary el-button"
                    >
                      Fetch Current Authenticators
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-pagination-wrap"
        >
          <div
            class="el-pagination-text"
          >
            <input
              class="el-pagination-input"
              value="1"
            />
             of 
            1
          </div>
          <button
            class="el-pagination-button"
            data-testid="back-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
          <button
            class="el-pagination-button"
            data-testid="forward-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
